Add demo image to Sound Design Assistant section
Added a demo image for the Sound Design Assistant.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
             margin: 0 0 1rem 1rem;
             border: 1px solid #ccc;
         }
+        .demo-gif {
+            display: block;
+            max-width: 100%;
+            height: auto;
+            margin: 1rem auto;
+            border: 1px solid #ccc;
+        }
     </style>
 </head>
 <body>
@@ -71,6 +78,8 @@
             realtime parameter suggestions. User study showed 0.89 standard deviation improvement 
             in sound-matching tasks.
         </p>
+
+        <img src="trim.gif" alt="Sound Design Assistant Demo" class="demo-gif">
 
         <p>
             <strong>Dismantling the Illusion of Amplitude Modulation-Induced Vibrato</strong> (2021)<br>
