Update author paragraph to include CV link
Added a link to the CV in the author section.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <article>
         <img src="photo.jpg" alt="Max Henry" class="profile-photo">
         <h1>Max Henry</h1>
-        <p class="author">max.henry@mail.mcgill.ca</p>
+        <p class="author">max.henry@mail.mcgill.ca | <a href="MaxHenry_CV_Academic.pdf">CV</a></p>
 
         <p>
             Researcher interested in human-computer interaction, computer-assisted creativity, 
