add small decription and blipped gifs

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <article>
         <img src="photo.jpg" alt="Max Henry" class="profile-photo">
         <h1>Max Henry</h1>
-        <p class="author">max.henry@mail.mcgill.ca | <a href="MaxHenry_CV_Academic.pdf">CV</a></p>
+        <p class="author">max.henry@mail.mcgill.ca (<a href="MaxHenry_CV_Academic.pdf">Academic CV</a>)</p>
 
         <p>
             Researcher interested in human-computer interaction, computer-assisted creativity, 
@@ -79,7 +79,13 @@
             in sound-matching tasks.
         </p>
 
-        <img src="trim.gif" alt="Sound Design Assistant Demo" class="demo-gif">
+        <img src="gifs/four_knobs.gif" alt="Sound Design Assistant Demo" class="demo-gif">
+
+        <p style="text-align: left; font-style: italic; margin-top: 0.5rem; margin-bottom: 1.5rem;">
+            The design assistant in action. Each knob has a "live" value (small circle), as well 
+            as a "suggested" value (gray line). Suggestions react in realtime to the user, acting
+            as both a creative scaffolding, and to anticipate and extent their design intent.
+        </p>
 
         <p>
             <strong>Dismantling the Illusion of Amplitude Modulation-Induced Vibrato</strong> (2021)<br>
