add more description

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
         <p style="text-align: left; font-style: italic; margin-top: 0.5rem; margin-bottom: 1.5rem;">
             The design assistant in action. Each knob has a "live" value (small circle), as well 
             as a "suggested" value (gray line). Suggestions react in realtime to the user, acting
-            as both a creative scaffolding, and to anticipate and extent their design intent.
+            as creative scaffolding (hints/help), and to anticipate design intent. (An "accept" 
+            and "undo" button are not pictured.)
         </p>
 
         <p>
@@ -95,7 +96,6 @@
         <h2>Projects of Interest</h2>
 
         <p class="project">
-            Working on an <a href="https://github.com/maxsolomonhenry/backprop">autograd engine</a> 
             to learn about backprop, tensor calculus, and topological sort.
         </p>
 
