--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <h2>Projects of Interest</h2>
 
         <p class="project">
+            Working on an <a href="https://github.com/maxsolomonhenry/backprop">autograd engine</a> 
             to learn about backprop, tensor calculus, and topological sort.
         </p>
 
