add link to thesis

--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
         </p>
 
         <p>
-            <strong>Dismantling the Illusion of Amplitude Modulation-Induced Vibrato</strong> (2021)<br>
-            Psychoacoustic research on perceptual dimensions of amplitude modulation and pitch perception.
+            <strong>A Perceptual Study of Amplitude Modulation-Induced Vibrato</strong> (2021)<br>
+            Psychoacoustic research on perceptual dimensions of amplitude modulation and pitch
+            perception (<a href="https://www.mcgill.ca/mpcl/files/mpcl/henry_2021_mathesis.pdf">link</a>).
         </p>
 
         <h2>Projects of Interest</h2>
