add graph why note

--- a/index.html
+++ b/index.html
@@ -82,10 +82,16 @@
         <img src="gifs/four_knobs.gif" alt="Sound Design Assistant Demo" class="demo-gif">
 
         <p style="text-align: left; font-style: italic; margin-top: 0.5rem; margin-bottom: 1.5rem;">
-            The design assistant in action. Each knob has a "live" value (small circle), as well 
+            The design assistant in action. Each knob has a "live" value (small circle), as well
             as a "suggested" value (gray line). Suggestions react in realtime to the user, acting
-            as creative scaffolding (hints/help), and to anticipate design intent. (An "accept" 
+            as creative scaffolding (hints/help), and to anticipate design intent. (An "accept"
             and "undo" button are not pictured.)
+        </p>
+
+        <img src="gifs/qualitative_graph.png" alt="Qualitative Analysis Graph" class="demo-gif">
+
+        <p style="text-align: left; font-style: italic; margin-top: 0.5rem; margin-bottom: 1.5rem;">
+            Code graph showing themes from Louvain clustering. 
         </p>
 
         <p>
