--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             and "undo" button are not pictured.)
         </p>
 
-        <img src="gifs/qualitative_graph.png" alt="Qualitative Analysis Graph" class="demo-gif">
+        <img src="qualitative_graph.png" alt="Qualitative Analysis Graph" class="demo-gif">
 
         <p style="text-align: left; font-style: italic; margin-top: 0.5rem; margin-bottom: 1.5rem;">
             Code graph showing themes from Louvain clustering. 
