--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             margin: 1rem auto;
             border: 1px solid #ccc;
         }
+        .graph {
+            display: block;
+            max-width: 100%;
+            height: auto;
+            margin: 1rem auto;
+        }
     </style>
 </head>
 <body>
@@ -88,10 +94,12 @@
             and "undo" button are not pictured.)
         </p>
 
-        <img src="qualitative-graph-extended.png" alt="Qualitative Analysis Graph" class="demo-gif">
+        <img src="qualitative-graph-extended.png" alt="Qualitative Analysis Graph" class="graph">
 
         <p style="text-align: left; font-style: italic; margin-top: 0.5rem; margin-bottom: 1.5rem;">
-            Code graph showing themes from Louvain clustering. 
+            Code graph based on user interviews showing four themes (we used Louvain clustering):
+            Engine for Support (green), Engine for Discovery (blue), Patterns in Sound Design (purple),
+            and Pain Points (red).
         </p>
 
         <p>
