move award icon

--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
         <h2>Selected Publications</h2>
 
         <p class="publication">
-            Lee, H., Jiang, R., Yoo, Y., Henry, M., & Cooperstock, J. R. (2022).
+            🏆 Lee, H., Jiang, R., Yoo, Y., Henry, M., & Cooperstock, J. R. (2022).
             "The Sound of Hallucinations: Toward a more convincing emulation of internalized voices."
             <em>CHI '22: Proceedings of the 2022 CHI Conference on Human Factors in Computing Systems</em>.
             <a href="https://doi.org/10.1145/3491102.3501871">https://doi.org/10.1145/3491102.3501871</a>
-            🏆 <em>Honorable Mention CHI 2022</em>
+            <em>Honorable Mention CHI 2022</em>
         </p>
 
         <p class="publication">
