add journal to dafx paper

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         <p class="publication">
             Turian, J., Shier, J., Tzanetakis, G., McNally, K., & Henry, M. (2021).
             "One Billion Audio Sounds from GPU-enabled Modular Synthesis."
+            <em>Proceedings of the 24th International Conference on Digital Audio Effects (DAFx20in21)</em>.
             <a href="https://arxiv.org/abs/2104.12922">arXiv:2104.12922</a>
             (<a href="https://github.com/torchsynth/torchsynth">repo</a>)
         </p>
