add award symbol to matlab

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </p>
 
         <p class="project">
-            Built a <a href="https://github.com/maxsolomonhenry/aes_matlab_competition">phase vocoder plugin</a> 
+            🏆 Built a <a href="https://github.com/maxsolomonhenry/aes_matlab_competition">phase vocoder plugin</a> 
             in MATLAB that won silver at the AES Student Plugin Competition.
         </p>
 
